# repro-mcp

./: .gitignore  README.md  pyproject.toml
repro_defaults/: rules.yaml
src/repro_mcp/: cli.py  environment.py  logger.py  rules.py  server.py  session.py
tests/: test_core.py
